# utitlty-book-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  manage.py  pyproject.toml
docker/: apps.yaml  storages.yaml  tests.yaml
src/api/: api.py
src/api/readings/: router.py  schemas.py
src/apps/common/: models.py
src/apps/common/management/commands/: create_superuser.py
src/apps/readings/: apps.py
src/apps/readings/admin/: __init__.py  base_reading_admin.py  elect_reading_admin.py  gas_reading_admin.py
src/apps/readings/migrations/: 0001_gas_reading.py  0001_initial.py  0002_elect_reading.py  0003_add_adj_fields.py
src/apps/readings/models/: __init__.py  base_reading_model.py  elect_reading_model.py  gas_reading_model.py
src/apps/readings/querysets/: __init__.py  base_reading_queryset.py  elect_reading_queryset.py  gas_reading_queryset.py
src/project/: asgi.py  settings.py  urls.py  wsgi.py
src/project/settings/: base.py  test.py
tests/: factory.py
tests/readings/: test_elect_reading.py  test_gas_reading.py
