[project]
name = "utitlty-book"
version = "0.1.0"
description = "Service for accounting and control of utility expenses."
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "django>=5.2.11,<=5.3",
    "django-environ>=0.13.0,<=0.14",
    "django-ninja>=1.5.3,<=1.6",
    "psycopg>=3.3.3,<=3.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<=4.6",
    "pytest>=9.0.2,<=9.1",
    "pytest-mock>=3.15.1,<=3.16",
]
