[project]
name = "utitlty-book-api"
version = "0.1.0"
description = "REST API сервис для учёта и контроля коммунальных расходов (электроэнергия и газ)."
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "django>=5.2.11,<=5.3",
    "django-environ>=0.13.0,<=0.14",
    "django-ninja>=1.5.3,<=1.6",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "factory-boy>=3.3.3,<=3.4",
    "pre-commit>=4.5.1,<=4.6",
    "pytest>=9.0.2,<=9.1",
    "pytest-django>=4.9.0,<=4.10",
    "pytest-mock>=3.15.1,<=3.16",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.project.settings.test"
pythonpath = ["."]
testpaths = ["tests"]
